@@ -8,9 +8,13 @@ extern void Gfx_Clear(char* canvas, unsigned char color);
 extern void Gfx_Init(char* canvas, unsigned short w, unsigned char h);
 extern void Gfx_Select(char* canvas);
 extern void Gfx_Prep(char* buffer);
+extern void Gfx_Prep_Raw(unsigned char bank, char* buffer);
 extern void Gfx_Prep_Set(char* buffer);
+extern void Gfx_Prep_Set_Raw(unsigned char bank, char* buffer);
 extern unsigned char Gfx_Load(char* filename, char* buffer);
+extern unsigned char Gfx_Load_Raw(char* filename, unsigned char bank, char* buffer);
 extern unsigned char Gfx_Load_Set(char* filename, char* buffer);
+extern unsigned char Gfx_Load_Set_Raw(char* filename, unsigned char bank, char* buffer);
 extern unsigned char Gfx_Save(char* filename, char* buffer);
 extern void Gfx_Pixel(unsigned short x, unsigned char y, unsigned char color);
 extern unsigned char Gfx_Value(unsigned short x, unsigned char y);
@@ -21,6 +25,8 @@ extern void Gfx_HLine(unsigned short x, unsigned char y, unsigned short w, unsig
 extern void Gfx_VLine(unsigned short x, unsigned char y, unsigned short h, unsigned char color);
 extern void Gfx_Put(char* image, unsigned short x, unsigned char y, unsigned char mode);
 extern void Gfx_Put_Set(char* image, unsigned short x, unsigned char y, unsigned char mode, unsigned char tile);
+extern char* Gfx_TileAddr(char* image, unsigned char tile);
+extern char* Gfx_TileAddr_Raw(unsigned char bank, char* image, unsigned char tile);
 extern void Gfx_Get(char* image, unsigned short x, unsigned char y, unsigned char w, unsigned char h);
 extern void Gfx_Box(unsigned short x0, unsigned char y0, unsigned short x1, unsigned short y1, unsigned char color);
 extern void Gfx_BoxF(unsigned short x0, unsigned char y0, unsigned short x1, unsigned short y1, unsigned char color);
