@@ -1,3 +1,4 @@
+#include <symbos.h>
 #include <graphics.h>
 #include "gfxcore.h"
 
@@ -12,7 +13,7 @@ void Gfx_Prep_Set(char* buffer) {
 }
 
 unsigned char Gfx_Load_Set(char* filename, char* buffer) {
-    if (_Gfx_Load(filename, buffer))
+    if (_Gfx_Load(filename, _symbank, buffer))
         return 1;
     Gfx_Prep_Set(buffer);
     return 0;
@@ -21,4 +22,8 @@ unsigned char Gfx_Load_Set(char* filename, char* buffer) {
 void Gfx_Put_Set(char* image, unsigned short x, unsigned char y, unsigned char mode, unsigned char tile) {
     image += (*(unsigned short*)image * tile) + 3;
     Gfx_Put(image, x, y, mode);
+}
+
+char* Gfx_TileAddr(char* image, unsigned char tile) {
+    return image + (*(unsigned short*)image * tile) + 3;
 }
